# booktsore

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
